now using the compose_tips hook to inform users about bbcode. if someone wants to write proper help for this hook, it is most welcome. i linked to a bbcode out on the web.
thanks al for a nice, simple module

--- a/README
+++ b/README
@@ -12,6 +12,7 @@ Installation
 ============
  - Copy bbcode.module to modules/
  - Enable the module as usual from Drupal's admin pages.
+ - Optional. Install the compose_tips module in order to inform your users about bbcode
 
 Configuration
 =============
