converting my name to UTF-8

--- a/README
+++ b/README
@@ -35,7 +35,7 @@ Credits / Contact
 The original author of this module is Alastair Maw, who can be reached at
 drupal-bbcode[at]almaw.com. Gabor Hojtsy (goba[at]php.net) also contributed
 to the module and is the active maintainer.
-Javascript encoding of emails by László Bácsi (lackac[at]math.bme.hu).
+Javascript encoding of emails by LÃ¡szlÃ³ BÃ¡csi (lackac[at]math.bme.hu).
 
 TODO
 ------------------------------------------------------------------------------
