--- a/po/hu/general.po
+++ b/po/hu/general.po
@@ -1,27 +1,32 @@
-# Hungarian translation of Drupal bbcode.module
-# Copyright Weblabor Team <info [at] weblabor.hu>
+# Hungarian translation of Drupal
+# Copyright Drupal.hu Fordítói Csapat <forditas [at] drupal.hu>
+# Generated from files:
+#  bbcode-filter.inc,v 1.6 2004/08/31 20:49:14 LacKac
+#  bbcode-help.inc,v 1.3 2004/09/12 15:48:55 goba
 #
 msgid ""
-msgstr "Project-Id-Version: 1.26\n"
-"POT-Creation-Date: 2003-11-23 15:20+0100\n"
-"PO-Revision-Date: 2004-02-29 21:04+0100\n"
-"Last-Translator: Weblabor Team <info [at] weblabor.hu>\n"
-"Language-Team: hu\n"
+msgstr ""
+"Project-Id-Version: Drupal 4.5.0\n"
+"POT-Creation-Date: 2005-01-08 19:20+0000\n"
+"PO-Revision-Date: 2005-01-08 20:32+0100\n"
+"Last-Translator: Drupal.hu Fordítói Csapat <forditas [at] drupal.hu>\n"
+"Language-Team: Drupal.hu Fordítói Csapat <forditas [at] drupal.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
-#: bbcode.module:10
-msgid "Use bbcode in your posts."
-msgstr "BBcode formázás használatát teszi lehetővé."
+#: bbcode-filter.inc:6
+msgid "Quote"
+msgstr "Idézet"
 
-#: bbcode.module:14
-msgid "You can use <a href=\"%bbcode_help\">BBCode tags</a> in the text, URLs will be automatically converted to links"
-msgstr "<a href=\"%bbcode_help\">BBCode jelölők</a> használata engedélyezett, az URL-ek automatikusan linkké alakulnak"
+#: bbcode-filter.inc:7
+msgid "Quote \\1"
+msgstr "Idézet (\\1)"
 
-#: bbcode.module:19
-msgid "<h1>BBCode Guide</h1>\n"
+#: bbcode-help.inc:5
+msgid ""
+"<h1>BBCode Guide</h1>\n"
 "\n"
 "<h2>Introduction</h2>\n"
 "\n"
@@ -77,7 +82,8 @@ msgid "<h1>BBCode Guide</h1>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>I [u]would not like to[/u] offend you</td>\n"
-"  <td>I <span style=\"text-decoration: underline;\">would not like to</span> offend you</td>\n"
+"  <td>I <span style=\"text-decoration: underline;\">would not like to</span> "
+"offend you</td>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>Jane was at [color=blue]the coast[/color]</td>\n"
@@ -103,19 +109,25 @@ msgid "<h1>BBCode Guide</h1>\n"
 "<p>\n"
 " Drupal recognizes URLs (Uniform Resource Locators) used in your posts, and\n"
 " automatically replaces them with links. For URLs starting with \"www\" or\n"
-" \"ftp\" (eg. www.example.com) there is no need for a protocol specification,\n"
+" \"ftp\" (eg. www.example.com) there is no need for a protocol "
+"specification,\n"
 " but you need to specify a protocol for other types of addresses\n"
 " (eg. example.com).\n"
 "</p>\n"
 "<p>\n"
-" Drupal also recognizes email addresses in posts automatically, but for compatibility\n"
-" with the common BBCode implementations, also provides the <strong>[email]</strong> tag\n"
-" to mark email addresses. There is no spam protection applied to the email addresses!\n"
+" Drupal also recognizes email addresses in posts automatically, but for "
+"compatibility\n"
+" with the common BBCode implementations, also provides the <strong>[email]</"
+"strong> tag\n"
+" to mark email addresses. There is no spam protection applied to the email "
+"addresses!\n"
 "</p>\n"
 "<p>\n"
-" You can use the <strong>[url]</strong> tag with a parameter to specify a link with\n"
+" You can use the <strong>[url]</strong> tag with a parameter to specify a "
+"link with\n"
 " meaningful text to click on. If you use the url tag without the parameter,\n"
-" then the enclosed text is assumed to be an URL, and a link is created to that\n"
+" then the enclosed text is assumed to be an URL, and a link is created to "
+"that\n"
 " destination.\n"
 "</p>\n"
 "\n"
@@ -125,27 +137,34 @@ msgid "<h1>BBCode Guide</h1>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>For more examples, visit www.example.com</td>\n"
-"  <td>For more examples, visit <a href=\"http://www.example.com\" target=\"_blank\">www.example.com</a></td>\n"
+"  <td>For more examples, visit <a href=\"http://www.example.com\" target="
+"\"_blank\">www.example.com</a></td>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>For more examples, visit http://example.com</td>\n"
-"  <td>For more examples, visit <a href=\"http://example.com\" target=\"_blank\">http://example.com</a></td>\n"
+"  <td>For more examples, visit <a href=\"http://example.com\" target=\"_blank"
+"\">http://example.com</a></td>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>If you have questions ask me at joe@example.com</td>\n"
-"  <td>If you have questions ask me at <a href=\"mailto:joe@example.com\">joe@example.com</a></td>\n"
+"  <td>If you have questions ask me at <a href=\"mailto:joe@example.com"
+"\">joe@example.com</a></td>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>If you have questions ask me at [email]joe@example.com[/email]</td>\n"
-"  <td>If you have questions ask me at <a href=\"mailto:joe@example.com\">joe@example.com</a></td>\n"
+"  <td>If you have questions ask me at <a href=\"mailto:joe@example.com"
+"\">joe@example.com</a></td>\n"
 " </tr>\n"
 " <tr>\n"
-"  <td>We use [url=http://example.com/]the example site[/url] in these examples</td>\n"
-"  <td>We use <a href=\"http://example.com/\" target=\"_blank\">the example site</a> in these examples</td>\n"
+"  <td>We use [url=http://example.com/]the example site[/url] in these "
+"examples</td>\n"
+"  <td>We use <a href=\"http://example.com/\" target=\"_blank\">the example "
+"site</a> in these examples</td>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>We use [url]http://example.com/[/url] in these examples</td>\n"
-"  <td>We use <a href=\"http://example.com/\" target=\"_blank\">http://example.com/</a> in these examples</td>\n"
+"  <td>We use <a href=\"http://example.com/\" target=\"_blank\">http://"
+"example.com/</a> in these examples</td>\n"
 " </tr>\n"
 "</table>\n"
 "\n"
@@ -167,31 +186,37 @@ msgid "<h1>BBCode Guide</h1>\n"
 "<p>\n"
 " You can also specify the desired display dimensions of the image by\n"
 " adding a dimension parameter to the <strong>[img]</strong> tag. <code>A\n"
-" good screenshot: [img=640x480]http://example.com/screenshot.png[/img]</code>\n"
+" good screenshot: [img=640x480]http://example.com/screenshot.png[/img]</"
+"code>\n"
 " will display the image in 640x480 (though the full image will be\n"
 " downloaded). Do not use this to show a thumbnail of an image!\n"
 "</p>\n"
 "\n"
 "<p>\n"
 " You are free to link an image to an external destination by enclosing\n"
-" the <strong>[img]</strong> tag with an <strong>[url]</strong> tag: <code>See\n"
-" [url=http://example.com][img]http://example.com/screenshot.png[/img][/url]</code>.\n"
+" the <strong>[img]</strong> tag with an <strong>[url]</strong> tag: "
+"<code>See\n"
+" [url=http://example.com][img]http://example.com/screenshot.png[/img][/url]</"
+"code>.\n"
 "</p>\n"
 "\n"
 "<h2>Ordered and unordered lists</h2>\n"
 "\n"
 "<p>\n"
 " The simplest list type is the unordered list, which means that there is\n"
-" no numbering applied to the elements. You can make such a list by enclosing\n"
+" no numbering applied to the elements. You can make such a list by "
+"enclosing\n"
 " the list elements in <strong>[list]</strong> opening and closing tags.\n"
-" Specify the start of one element with the <strong>[*]</strong> list element\n"
+" Specify the start of one element with the <strong>[*]</strong> list "
+"element\n"
 " marker, which has no closing tag pair.\n"
 "</p>\n"
 "\n"
 "<p>\n"
 " To create an ordered list, you should add a parameter to the [list]\n"
 " list tag specifying what type of ordered list you would like to see.\n"
-" The possible parameters are \"i\", \"I\", \"1\", \"a\", and \"A\" which all\n"
+" The possible parameters are \"i\", \"I\", \"1\", \"a\", and \"A\" which "
+"all\n"
 " correspond to the display of the first list element.\n"
 "</p>\n"
 "\n"
@@ -293,6 +318,17 @@ msgid "<h1>BBCode Guide</h1>\n"
 " </tr>\n"
 "</table>\n"
 "\n"
+"<h2>Text and block alignment</h2>\n"
+"\n"
+"<p>\n"
+" You can also set the alignment of the text by using <code>[left]</code>,\n"
+" <code>[right]</code> and <code>[center]</code> tags. The <code>[float]</"
+"code>\n"
+" tag can be used to place floating boxes in the text (especially handy for\n"
+" images). You can specify the direction of the floating with\n"
+" <code>[float=left]</code> and <code>[float=right]</code>.\n"
+"</p>\n"
+"\n"
 "<h2>Using multiple formatting tags</h2>\n"
 "\n"
 "<p>\n"
@@ -303,10 +339,12 @@ msgid "<h1>BBCode Guide</h1>\n"
 "</p>\n"
 "\n"
 "<p>\n"
-" Make sure that you take care of the proper order of the opening and closing\n"
+" Make sure that you take care of the proper order of the opening and "
+"closing\n"
 " tags. You should close the tags in the opposite order in which you opened\n"
 " them. Otherwise you might get very strange rendering results. Also check\n"
-" your post with the preview function before submiting it to discover possible\n"
+" your post with the preview function before submiting it to discover "
+"possible\n"
 " formatting errors due to improper BBCode usage.\n"
 "</p>\n"
 "\n"
@@ -317,7 +355,8 @@ msgid "<h1>BBCode Guide</h1>\n"
 " inside <strong>[code]</strong> tags, and you cannot apply some formatting\n"
 " to all list items by wrapping the list with that formatting tag.\n"
 "</p>"
-msgstr "<h1>BBCode Útmutató</h1>\n"
+msgstr ""
+"<h1>BBCode Útmutató</h1>\n"
 "\n"
 "<h2>Bevezetés</h2>\n"
 "\n"
@@ -340,9 +379,11 @@ msgstr "<h1>BBCode Útmutató</h1>\n"
 "\n"
 "<p>\n"
 " A BBCode lehetővé teszi számodra, hogy kiemelj pár részt a szövegedből,\n"
-" erre a célra a következő elemeket használhatod: <strong>[b]</strong> (félkövér),\n"
+" erre a célra a következő elemeket használhatod: <strong>[b]</strong> "
+"(félkövér),\n"
 " <strong>[i]</strong> (döntött) és <strong>[u]</strong> (aláhúzott). A\n"
-" <strong>[color]</strong> (szín) és a <strong>[size]</strong> (méret) elemek\n"
+" <strong>[color]</strong> (szín) és a <strong>[size]</strong> (méret) "
+"elemek\n"
 " segítségével a színét és a méretét szabályozhatod a szövegednek. Mindkét\n"
 " esetben egy paraméter megadása is szükséges (milyen színű és milyen\n"
 " méretű legyen), a szögleteszárójelen belül a color és a size szavak\n"
@@ -351,7 +392,8 @@ msgstr "<h1>BBCode Útmutató</h1>\n"
 "</p>\n"
 "\n"
 "<p>\n"
-" Bármelyik, a HTML-ben is használható szín a rendelkezésedre áll (red, blue,\n"
+" Bármelyik, a HTML-ben is használható szín a rendelkezésedre áll (red, "
+"blue,\n"
 " green, white, stb.), vagy hexadecimális számokkal (#CDCDCD, #FFFFFF, stb.)\n"
 " is megadhatod a [color] elem esetén a paramétert. A [size] elemmel 10\n"
 " és 30 pixel között adhatod meg a méretet, a 10 a legkisebb. Megjegyzendő,\n"
@@ -373,7 +415,8 @@ msgstr "<h1>BBCode Útmutató</h1>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>[u]Nem szeretnélek[/u] megbántani.</td>\n"
-"  <td><span style=\"text-decoration: underline;\">Nem szeretnélek</span> megbántani.</td>\n"
+"  <td><span style=\"text-decoration: underline;\">Nem szeretnélek</span> "
+"megbántani.</td>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>Marit a [color=blue]parton[/color] láttam.</td>\n"
@@ -385,7 +428,8 @@ msgstr "<h1>BBCode Útmutató</h1>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>Azt mondtad, hogy [size=20]HALIHÓ![/size]</td>\n"
-"  <td>Azt mondtad, hogy <span style=\"font-size: 20px;\">HALIHÓ!</span></td>\n"
+"  <td>Azt mondtad, hogy <span style=\"font-size: 20px;\">HALIHÓ!</span></"
+"td>\n"
 " </tr>\n"
 "</table>\n"
 "\n"
@@ -422,27 +466,36 @@ msgstr "<h1>BBCode Útmutató</h1>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>További példákat a www.pelda.hu címen találsz!</td>\n"
-"  <td>További példákat a <a href=\"http://www.pelda.hu\" target=\"_blank\">www.pelda.hu</a> címen találsz!</td>\n"
+"  <td>További példákat a <a href=\"http://www.pelda.hu\" target=\"_blank"
+"\">www.pelda.hu</a> címen találsz!</td>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>További példákért látogass el a http://pelda.hu címre!</td>\n"
-"  <td>További példákért látogass el a <a href=\"http://pelda.hu\" target=\"_blank\">http://pelda.hu</a> címre!</td>\n"
+"  <td>További példákért látogass el a <a href=\"http://pelda.hu\" target="
+"\"_blank\">http://pelda.hu</a> címre!</td>\n"
 " </tr>\n"
 " <tr>\n"
 "  <td>Bármilyen kérdésed van, küldj egy levelet a jani@pelda.hu címre!</td>\n"
-"  <td>Bármilyen kérdésed van, küldj egy levelet a <a href=\"mailto:jani@pelda.hu\">jani@pelda.hu</a> címre!</td>\n"
+"  <td>Bármilyen kérdésed van, küldj egy levelet a <a href=\"mailto:"
+"jani@pelda.hu\">jani@pelda.hu</a> címre!</td>\n"
 " </tr>\n"
 " <tr>\n"
-"  <td>Ha kérdéseid vannak, kérdezz a [email]jani@pelda.hu[/email] címen!</td>\n"
-"  <td>Ha kérdéseid vannak, kérdezz a <a href=\"mailto:jani@pelda.hu\">jani@pelda.hu</a> címen!</td>\n"
+"  <td>Ha kérdéseid vannak, kérdezz a [email]jani@pelda.hu[/email] címen!</"
+"td>\n"
+"  <td>Ha kérdéseid vannak, kérdezz a <a href=\"mailto:jani@pelda.hu"
+"\">jani@pelda.hu</a> címen!</td>\n"
 " </tr>\n"
 " <tr>\n"
-"  <td>Mi a [url=http://pelda.hu/]példa oldalt[/url] használjuk ezekben a példákban.</td>\n"
-"  <td>Mi a <a href=\"http://pelda.hu/\" target=\"_blank\">példa oldalt</a> használjuk ezekben a példákban.</td>\n"
+"  <td>Mi a [url=http://pelda.hu/]példa oldalt[/url] használjuk ezekben a "
+"példákban.</td>\n"
+"  <td>Mi a <a href=\"http://pelda.hu/\" target=\"_blank\">példa oldalt</a> "
+"használjuk ezekben a példákban.</td>\n"
 " </tr>\n"
 " <tr>\n"
-"  <td>Mi a [url]http://pelda.hu/[/url]-t használjuk ezekben a példákban.</td>\n"
-"  <td>Mi a <a href=\"http://pelda.hu/\" target=\"_blank\">http://pelda.hu/</a>-t használjuk ezekben a példákban.</td>\n"
+"  <td>Mi a [url]http://pelda.hu/[/url]-t használjuk ezekben a példákban.</"
+"td>\n"
+"  <td>Mi a <a href=\"http://pelda.hu/\" target=\"_blank\">http://pelda.hu/</"
+"a>-t használjuk ezekben a példákban.</td>\n"
 " </tr>\n"
 "</table>\n"
 "\n"
@@ -472,22 +525,26 @@ msgstr "<h1>BBCode Útmutató</h1>\n"
 "<p>\n"
 " Szabadon linkelheted a képedet egy külső címre, az <strong>[img]</strong>\n"
 " elem köré kell csak elhelyezned egy <strong>[url]</strong> elemet:\n"
-" <code>Lásd: [url=http://pelda.hu][img]http://pelda.hu/kepernyokep.png[/img][/url]</code>.\n"
+" <code>Lásd: [url=http://pelda.hu][img]http://pelda.hu/kepernyokep.png[/img]"
+"[/url]</code>.\n"
 "</p>\n"
 "\n"
 "<h2>Számozott lista és felsorolások</h2>\n"
 "\n"
 "<p>\n"
 " A legegyszerűbb listatípus a felsorolás, vagyis ahol nincsenek megszámozva\n"
-" az elemei a listának. Egy ilyen listát a listaelemeket a <strong>[list]</strong>\n"
-" nyitó és záró elemek közé írva készíthetsz. Egy elem kezdetét a <strong>[*]</strong>\n"
+" az elemei a listának. Egy ilyen listát a listaelemeket a <strong>[list]</"
+"strong>\n"
+" nyitó és záró elemek közé írva készíthetsz. Egy elem kezdetét a <strong>[*]"
+"</strong>\n"
 " jellel kell jelölnöd, melynek nincsen záró párja.\n"
 "</p>\n"
 "\n"
 "<p>\n"
 " Egy sorszámozott lista létrehozására a [list] elemhez egy paramétert\n"
 " kell rendelned, mely megmondja, hogy milyen jelekkel szeretnéd\n"
-" jelölni a listaelemeket. A lehetséges értékek \"i\", \"I\", \"1\", \"a\" és \"A\",\n"
+" jelölni a listaelemeket. A lehetséges értékek \"i\", \"I\", \"1\", \"a\" és "
+"\"A\",\n"
 " melyek mind az első elem megjelenítését határozzák meg.\n"
 "</p>\n"
 "\n"
@@ -590,18 +647,33 @@ msgstr "<h1>BBCode Útmutató</h1>\n"
 " </tr>\n"
 "</table>\n"
 "\n"
+"<h2>Szöveg és blokk igazítás</h2>\n"
+"\n"
+"<p>\n"
+" Lehetőség van a szöveg igazításának beállítására a <code>[left]</code>,\n"
+" <code>[right]</code> és <code>[center]</code> jelölőkkel. A <code>[float]</"
+"code>\n"
+" használható lebegő dobozok szövegbe helyezésére (különösen hasznos képek\n"
+" esetén). A lebegés iránya meghatározható a megadott paraméterrel, úgymint\n"
+" <code>[float=left]</code> vagy <code>[float=right]</code>.\n"
+"</p>\n"
+"\n"
 "<h2>Több formázó elem használata</h2>\n"
 "\n"
 "<p>\n"
-" Több formázó elemet is rendelhetsz egy adott szövegrészhez, például az <code>\n"
-" Én a [b][i]parton[i][/b] voltam</code>, <code>Én a <strong><em>parton</em></strong>\n"
+" Több formázó elemet is rendelhetsz egy adott szövegrészhez, például az "
+"<code>\n"
+" Én a [b][i]parton[i][/b] voltam</code>, <code>Én a <strong><em>parton</em></"
+"strong>\n"
 " voltam</code>-ként jelenik meg.\n"
 "</p>\n"
 "\n"
 "<p>\n"
-" Ellenőrizd, hogy figyeltél-e a helyes sorrendjére a nyitó és a záró elemeknek!\n"
+" Ellenőrizd, hogy figyeltél-e a helyes sorrendjére a nyitó és a záró "
+"elemeknek!\n"
 " Az elemeket fordított sorrendben kell becsuknod, mint ahogy megnyitottad,\n"
-" ellenkező esetben elég furcsa megjelenéssel is találkozhatsz. Mielőtt elküldöd,\n"
+" ellenkező esetben elég furcsa megjelenéssel is találkozhatsz. Mielőtt "
+"elküldöd,\n"
 " ellenőrizd a szövegeidet mindig az előnézet funkcióval, így felfedezheted\n"
 " a BBCode-ok rossz használatából eredő formázási hibákat.\n"
 "</p>\n"
@@ -614,23 +686,3 @@ msgstr "<h1>BBCode Útmutató</h1>\n"
 " szabályt beállítani globálisan az összes elemére egy listának sem\n"
 " (körbevéve formázó elemekkel).\n"
 "</p>"
-
-#: bbcode.module:321;449
-msgid "BBCode filter"
-msgstr "BBCode szűrő"
-
-#: bbcode.module:333
-msgid "Quote"
-msgstr "Idézet"
-
-#: bbcode.module:334
-msgid "Quote \\1"
-msgstr "Idézet (\\1)"
-
-#: bbcode.module:449
-msgid "The bbcode filter is enabled. You can get more information about the possible formatting rules on the <a href=\"%filter_tips\">Compose Tips</a> page."
-msgstr "A bbcode szűrő be van kapcsolva. A lehetséges formázási szabályokról bővebben a <a href=\"%filter_tips\">szerkesztési tippek</a> oldalon olvashatsz."
-
-#: bbcode.module:0
-msgid "bbcode"
-msgstr "bbcode"
